--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Verificador de idade</h1>
+        <h2>Verificador de idade</h2>
     </header>
     <section>
         <div>
@@ -22,7 +22,7 @@
                 <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
             </p>
-            <p>
+            <p id="botao">
                 <input type="button" value="Verificar" onclick="verificar()">
             </p>
         </div>
